--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,9 +1,16 @@
+# Set sleep timeout to 30min (30*60*1000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
 CONFIG_ZMK_USB_LOGGING=n
 
 # Mouse config, requires PR #778
-CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_MOUSE_TICK_DURATION=8
+# CONFIG_ZMK_MOUSE=y
+# CONFIG_ZMK_MOUSE_TICK_DURATION=8
 
 # Combo config, automated by build script
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3
+
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=5
