--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -9,18 +9,17 @@
 
 // use require-prior-idle-ms for combos
 #undef COMBO_HOOK
-#define COMBO_HOOK require-prior-idle-ms = <150>;
+#define COMBO_HOOK require-prior-idle-ms = <100>;
 
 #define COMBO_TERM_FAST 22
 #define COMBO_TERM_SLOW 30
 #define COMBO_TERM_CROSSHAND 40
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
-#define HMC_ESC   &hml LS(LALT) ESC
-#define HMC_TAB   &hml LS(LGUI) TAB
-#define HMC_MINUS &hmr RS(RGUI) MINUS
-#define HMC_BSPC  &hmr RS(RALT) BSPC
-#define HMC_RET   &hmr RG(RS(RALT)) RET
+#define HMC_TAB   &hml LA(LSFT) TAB
+#define HMC_ESC   &hml LG(LSFT) ESC
+#define HMC_BSPC  &hmr RG(RSFT) BSPC
+#define HMC_RET   &hmr RA(RSFT) RET
 
 // some one-shot open/close braces macros
 SIMPLE_MACRO(lrbkt, &kp LBKT &kp RBKT)
@@ -47,8 +46,8 @@ ZMK_COMBO(lbrc,  &kp LBRC,      LT3 LT2,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rbrc,  &kp RBRC,      LT2 LT1,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(lrbrc, &lrbrc,        LT3 LT1,     ALL, COMBO_TERM_FAST)
 
-ZMK_COMBO(esc,   HMC_ESC,       LM3 LM2,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(tab,   HMC_TAB,       LM2 LM1,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(tab,   HMC_TAB,       LM3 LM2,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(esc,   HMC_ESC,       LM2 LM1,     ALL, COMBO_TERM_FAST)
 
 ZMK_COMBO(lbkt,  &kp LBKT,      LB3 LB2,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rbkt,  &kp RBKT,      LB2 LB1,     ALL, COMBO_TERM_FAST)
@@ -59,9 +58,8 @@ ZMK_COMBO(lpar,  &kp LPAR,      RT1 RT2,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(rpar,  &kp RPAR,      RT2 RT3,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(lrpar, &lrpar,        RT1 RT3,     ALL, COMBO_TERM_FAST)
 
-ZMK_COMBO(minus, HMC_MINUS,     RM1 RM2,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(bspc,  HMC_BSPC,      RM2 RM3,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ret,   HMC_RET,       RM1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(bspc,  HMC_BSPC,      RM1 RM2,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ret,   HMC_RET,       RM2 RM3,     ALL, COMBO_TERM_FAST)
 
 ZMK_COMBO(lt,    &kp LT,        RB1 RB2,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gt,    &kp GT,        RB2 RB3,     ALL, COMBO_TERM_FAST)
@@ -78,19 +76,19 @@ ZMK_COMBO(prcnt, &kp PRCNT,     LT0 LM0,     ALL, COMBO_TERM_SLOW)
 
 ZMK_COMBO(grave, &kp GRAVE,     LM3 LB3,     ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(bslh,  &kp BSLH,      LM2 LB2,     ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(euro,  EURO,          LM1 LB1,     ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(equal, EQUALHOLD,     LM1 LB1,     ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(tilde, &kp TILDE,     LM0 LB0,     ALL, COMBO_TERM_SLOW)
 
 // Right hand
 ZMK_COMBO(caret, &kp CARET,     RT0 RM0,     ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(amps,  AMPSHOLD,      RT1 RM1,     ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(plus,  &kp PLUS,      RT1 RM1,     ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(equal, EQUALHOLD,     RT3 RM3,     ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(amps,  AMPSHOLD,      RT3 RM3,     ALL, COMBO_TERM_SLOW)
 
 ZMK_COMBO(under, &kp UNDER,     RM0 RB0,     ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(pipe,  PIPEHOLD,      RM1 RB1,     ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(minus, &kp MINUS,     RM1 RB1,     ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(fslh,  &kp FSLH,      RM2 RB2,     ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(plus,  &kp PLUS,      RM3 RB3,     ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(pipe,  PIPEHOLD,      RM3 RB3,     ALL, COMBO_TERM_SLOW)
 
 /*********************************************************/
 // Thumb combos
